--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="rulesMenu" class="box" *ngIf="!startPlaying">
   <ul id="rulesList">
-      <li>You will get only <span id="playerChances"></span> chances</li>
+      <li>You will get only {{playerMove}} chances</li>
       <li>If you guess lower number than expected the balls will turn green</li>
       <li>If you guess Higher number than expected the balls will turn run</li>
   </ul>
