--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ul id="rulesList">
       <li>You will get only {{playerMove}} chances</li>
       <li>If you guess lower number than expected the balls will turn green</li>
-      <li>If you guess Higher number than expected the balls will turn run</li>
+      <li>If you guess Higher number than expected the balls will turn red</li>
   </ul>
   <button id="startGame" (click)="startGame()"> click to start game</button>
 
